web/src/routes/root/ChatTab/index.module.css
.chatTitle {
  margin-left: 5px;
  height: 1.3rem;
  color: var(--text-primary);
  border: none;
  /* the following 3 lines ellipsis text */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.chatTitle:focus {
  outline: none !important;
  border: none;
  border-bottom: 1px solid var(--text-primary);
}

.chatOpMenu {
  margin-left: auto;
}

.chatOpMenuIcon {
  background: transparent;
  border: unset;
  color: var(--text-primary);
}

.chatOpMenuList {
  background-color: var(--bg-primary);
  border: 1px solid var(--border-color);
  border-radius: 5px;
  position: absolute;
  z-index: 1;
  padding: 0.5rem;
}

.chatOpMenuItem {
  background: transparent;
  border: unset;
  border-radius: 5px;
  color: var(--text-primary);
  display: flex;
  align-items: center;
  padding: 0.3vw;
  width: 100%;
}

.chatOpMenuItem:hover {
  background-color: var(--bg-secondary);
}

.chatOpMenuItemText {
  margin: 0.5vw;
}

